Add mine-click handler, convert to buttons, fix css

--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,13 @@ body {
     border: 1px solid black;
 }
 
-td {
-    padding: 5px;
-    width: 15px;
-    height: 15px;
+button {
+    padding: 0;
+    width: 25px;
+    min-width: 25px;
+    max-width: 25px;
+    height: 25px;
+    min-height: 25px;
+    max-height: 25px;
     text-align: center;
-    border: 1px solid black;
 }
